2008-03-13 19:37-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/gsc/GSStreamContext.m: Remove implementation of 
	DPSrectclip:::: since it was causing issues with printing.  Will
	investigate further to see if this is the correct fix.

2008-03-09 Fred Kiefer <FredKiefer@gmx.de>

        * Source/art/ARTContext.m (-GSDrawImage:): Remove this hack again.
	* Source/art/image.m (_image_get_color_rgb_cmyk_gray,
	_image_get_color_rgb_8):  Make sure the image gets unpremultied in
	all cases.

2008-03-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source\win32\WIN32Server.m (-exwindowStyleForGSStyle:): 
	New method used in window::::, stylewindow: and styleoffsets:::::.
	* Headers\win32\WIN32Server.h,
	* Source\win32\WIN32Server.m (-resetForGSWindowStyle:w32Style:):
	Remove method.
	
2008-03-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers\win32\WIN32Server.h: make 'orderedIn' and 'level' 32bit
	fields at start of structure so that we can easily use GetWindowLong()
	and SetWindowLong() with them.
	* Source\win32\w32_movesize.m:
	* Source\win32\WIN32Server.m:
	Change to accessing 'orderedIn' and 'level' directly using 
	GetWindowLong() and SetWindowLong() so that code works when windows
	are owned by another app.

2008-03-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\w32_movesize.m: Bypass all existing code to send a
	resize when a window is minimised ... just call the miniaturise:
	method of the gui.  Should fix bug 22274

2008-03-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Correct the cairo
	version #ifdef.

2008-03-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\WIN32Server.m: Improve window level code ... when moving
	a window to the top of a level, jump it right to the top of the window
	z-order so that it is above any non-gnustep windows.
	* Source\win32\w32_movesize.m: If a window is jumped to the top of the
	z-order and hence breaks the level rules, use a bubble sort to get