@@ -1,3 +1,7 @@
+2008-03-15 17:48-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Source/gsc/GSStreamContext.m: Added implementation for GSDrawImage.
+
 2008-03-13 19:37-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Source/gsc/GSStreamContext.m: Remove implementation of 
